Refactor Notification Module

--- a/apps/components/src/app/app.component.html
+++ b/apps/components/src/app/app.component.html
@@ -1,4 +1,4 @@
 <bulma-progress-bar></bulma-progress-bar>
 <bulma-breadcrumb-container></bulma-breadcrumb-container>
-
+<bulma-notification-container></bulma-notification-container>
 <router-outlet></router-outlet>
