Refactor Notification Module

--- a/apps/components/src/app/app.component.html
+++ b/apps/components/src/app/app.component.html
@@ -1,4 +1,97 @@
 <bulma-progress-bar></bulma-progress-bar>
 <bulma-breadcrumb-container></bulma-breadcrumb-container>
 <bulma-notification-container></bulma-notification-container>
+<bulma-tab-group>
+  <bulma-tab label="Foschni" [isActive]="true">
+    foschni foschni 1
+  </bulma-tab>
+  <bulma-tab label="Foschni">
+    foschni foschni 2
+  </bulma-tab>
+  <bulma-tab label="Foschni">
+    foschni foschni 1
+  </bulma-tab>
+  <bulma-tab label="Foschni">
+    foschni foschni 1
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+    <p>
+      foschni
+    </p>
+  </bulma-tab>
+
+</bulma-tab-group>
 <router-outlet></router-outlet>
