--- a/libs/tabs/src/lib/components/tab-group/tab-group.component.html
+++ b/libs/tabs/src/lib/components/tab-group/tab-group.component.html
@@ -1,6 +1,19 @@
-<ul>
-  <ng-content select="[tab-header]">
-  </ng-content>
-</ul>
-<ng-content select="[tab-body]">
-</ng-content>
+<div [class]="'tabs ' +cssClasses">
+  <ul role=" tablist">
+    <li [class.is-active]="tab.id === activeId" *ngFor="let tab of tabs">
+      <a [id]="tab.id" [class.disabled]="tab.disabled" href (click)="!!select(tab.id)" role="tab" [attr.tabindex]="(tab.disabled ? '-1': undefined)"
+        [attr.aria-controls]="(!destroyOnHide || tab.id === activeId ? tab.id + '-panel' : null)" [attr.aria-expanded]="tab.id === activeId"
+        [attr.aria-disabled]="tab.disabled">
+        <ng-template [ngTemplateOutlet]="tab.title?.templateRef"></ng-template>
+      </a>
+    </li>
+  </ul>
+</div>
+<div class="tab-content">
+  <ng-template ngFor let-tab [ngForOf]="tabs">
+    <div class="{{tab.id === activeId ? 'active' : null}}" *ngIf="!destroyOnHide || tab.id === activeId" role="tabpanel"
+      [attr.aria-labelledby]="tab.id" id="{{tab.id}}-panel" [attr.aria-expanded]="tab.id === activeId">
+      <ng-template [ngTemplateOutlet]="tab.content?.templateRef"></ng-template>
+    </div>
+  </ng-template>
+</div>
